--- a/themes/jsonresume-theme-orbit-custom/assets/less/default/base.less
+++ b/themes/jsonresume-theme-orbit-custom/assets/less/default/base.less
@@ -267,7 +267,6 @@ p {
     .item {
         margin-bottom: 15px;
         overflow: hidden;
-        height: 3.5em;
         ul {
             float: left;
             padding-left: 0px;
